--- a/assets/app/student/games/word-pipes/word-pipes.component.css
+++ b/assets/app/student/games/word-pipes/word-pipes.component.css
@@ -13,7 +13,8 @@
 }
  .endBox{
     background-color: green;
-    width: 100px;
+    min-width: 100px;
+    max-width: 250px;
     height: 100px;
     border: solid black 1px;
     
@@ -33,4 +34,12 @@
  .dropImg {
      visibility: hidden;
      height: 98px;
+ }
+
+ .title {
+     text-align: center;
+ }
+
+ .big-table {
+     margin: auto;
  }
