--- a/assets/app/cursor-follower/eyes/eyes.component.html
+++ b/assets/app/cursor-follower/eyes/eyes.component.html
@@ -1,4 +1,4 @@
-<div [@show]="show">
+<div>
     <div class="outerEye" id="lOEye" #lOEye [@move]="moveState" (@move.done)="onDone($event)" >    
         <div class="innerEye" id="lIEye" #lIEye ></div></div>
     <div class="outerEye" id="rOEye" #rOEye >
