--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,7 +1,5 @@
-<sq-navbar></sq-navbar>
+<sq-navbar #nav></sq-navbar>
 <router-outlet></router-outlet>
-<div *ngIf="loaded | async">
-    <!--<sq-cursor-follower-list [xPos]="xPos" [yPos]="yPos"></sq-cursor-follower-list>-->
-    <sq-cursor-display></sq-cursor-display>
-</div>
- <div (window:mousemove)="mouseMove()"></div>
+    <sq-cursor-follower [xPos]="xPos" [yPos]="yPos"></sq-cursor-follower>
+    <sq-cursor [xPos]="xPos" [yPos]="yPos"></sq-cursor>
+ <div (window:mousemove)="mouseMove($event)"></div> 
