--- a/assets/app/student/user-profile/user-profile-page/user-profile-page.component.html
+++ b/assets/app/student/user-profile/user-profile-page/user-profile-page.component.html
@@ -9,8 +9,8 @@
 
   </div>
   <div fxFlex="50">
-    <sq-button-grid-card title="Cursor" patchValue="cursor" initApi="/getStudent" [options]="cursorService.getCursors()"></sq-button-grid-card>
-    <sq-button-grid-card title="Cursor Follower" patchValue="cursorFollower" initApi="/getStudent" [options]="cursorFollowerService.getCursorFollowers()"></sq-button-grid-card>
+    <sq-button-grid-card title="Cursor" patchValue="cursor" [options]="cursorService.getCursors()" (buttonClicked)="changeCursor($event)"></sq-button-grid-card>
+    <sq-button-grid-card title="Cursor Follower" patchValue="cursorFollower" [options]="cursorFollowerService.getCursorFollowers()" (buttonClicked)="changeCursorFollower($event)"></sq-button-grid-card>
   </div>
 </div>
 
