--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/">
-    <title>Angular 2 Messenger</title>
+    <title>Scholar Quest</title>
    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='../stylesheets/style.css'/>
     <link rel='stylesheet' href='../stylesheets/indigo-pink.css'/>
