--- a/assets/app/student/games/typing/typing.component.html
+++ b/assets/app/student/games/typing/typing.component.html
@@ -1,4 +1,4 @@
-<sq-grade-sidenav (buttonClicked)="changeGradeLevel($event)">
+<!--<sq-grade-sidenav (buttonClicked)="changeGradeLevel($event)">-->
     <div class="container" fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="column">
         <h1 class="title">Typing</h1>
     </div>
@@ -31,5 +31,5 @@
             {{word}}
         </h5>
     </div>  
-</sq-grade-sidenav>
-<sq-end-game-dialog (playAgainSelect)="reload()" #endGameDialog></sq-end-game-dialog>
+<!--</sq-grade-sidenav>-->
+<!--<sq-end-game-dialog (playAgainSelect)="reload()" #endGameDialog></sq-end-game-dialog>-->
