--- a/assets/app/student/games/word-pipes/word-pipes.component.html
+++ b/assets/app/student/games/word-pipes/word-pipes.component.html
@@ -1,17 +1,8 @@
-<sq-game>
+<sq-game #game>
     <div class="title">
-        <h1>Vocabulary Pipes</h1>
+        <img class="title" src="../../../assets/games/word-pipes/title.png"> 
     </div>
     <div class="score">{{scoreText}}</div>
-    <div class="errors">
-        <div>
-            <md-icon>clear</md-icon>
-            <md-icon>clear</md-icon>
-            <md-icon>clear</md-icon>
-            <md-icon>clear</md-icon>
-            <md-icon>clear</md-icon>
-        </div>
-    </div>
     <table #gameTable>
         <tr *ngFor="let rows of gameTableRows; let r = index">
             <td>
@@ -31,11 +22,13 @@
                 </div>
                 <div class="startPipe" >
                     <!--under pipe-->
-                    <img src="" class="gameboardSquare pipe" draggable="false">
+                    <img src="" class="gameboardSquare pipe underPipe" draggable="false">
                     <!--water-->
-                    <div  class="gameboardSquare waterBlock"></div>
+                    <div  class="gameboardSquare waterBlock" oanimationend='test()' animationend='test()' webkitAnimationEnd='test()'></div>
+                    <!--special effect-->
+                    <img src="" class="gameboardSquare specialEffect noPointer"  draggable="false">
                     <!--outer pipe-->
-                    <img src="" class="gameboardSquare pipe" draggable="false">
+                    <img src="" class="gameboardSquare pipe outerPipe" draggable="false">
                 </div>
             </td>
             <td *ngFor="let data of gameTableData; let d = index" (drop)="onDrop($event, d+2, r)" (dragover)="allowDrop($event)" (dragleave)="unhighlightGameBoardTile($event, d+2, r)" (dragenter)="highlightGameboardTile($event, d+2, r)">
@@ -43,8 +36,8 @@
                     <img class="terrain noPointer" [src]="gameBoard[d+2][r].terrain" draggable="false">
                     <img src="" class="gameboardSquare pipe underPipe noPointer" [style.transform]='gameBoard[d+2][r].pipeRotation' draggable="false">
                      <!--water-->
-                    <div class="gameboardSquare waterBlock noPointer"></div>
-                    <div class="gameboardSquare waterBlock noPointer"></div>
+                    <div class="gameboardSquare waterBlock noPointer " (oanimationend)='test()' (animationend)='test()' (webkitAnimationEnd)='test()'></div>
+                    <div class="gameboardSquare waterBlock noPointer" (oanimationend)='test()' (animationend)='test()' (webkitAnimationEnd)='test()'></div>
                     <!--special effect-->
                     <img src="" class="gameboardSquare specialEffect noPointer"  draggable="false">
                     <img src="" class="gameboardSquare pipe outerPipe noPointer" [style.transform]='gameBoard[d+2][r].pipeRotation' draggable="false">
@@ -56,11 +49,12 @@
             <td>
                 <div class="endPipe" >
                     <!--under pipe-->   
-                    <img src="" class="gameboardSquare pipe" draggable="false">
+                    <img src="" class="gameboardSquare underPipe pipe" draggable="false">
                     <!--water-->
                     <div src="" class="gameboardSquare waterBlock"></div>
+                    <img src="" class="gameboardSquare specialEffect noPointer"  draggable="false">
                     <!--outer pipe-->
-                    <img src="" class="gameboardSquare pipe" draggable="false">
+                    <img src="" class="gameboardSquare outerPipe  pipe" draggable="false">
                 </div>
                 <div class="finishBox">
                     <p></p>
@@ -68,4 +62,5 @@
             </td>
         </tr>
     </table>
+     <img class="waterSpill" src="../../../assets/games/word-pipes/waterSpill.png" [@spill]="spillState"> 
 </sq-game>
