--- a/assets/app/student/games/game/game/game.component.html
+++ b/assets/app/student/games/game/game/game.component.html
@@ -4,4 +4,4 @@
     </md-card>
 </sq-grade-sidenav>
 <sq-end-game-dialog #endGame></sq-end-game-dialog>
-<sq-countdown-outer-dialog #countdown></sq-countdown-outer-dialog>
+<sq-countdown-outer-dialog #countdown (countdownDone)="countdownDone()"></sq-countdown-outer-dialog>
